Use a SequencedTaskRunner in AutomationController instead of a thread

This is made possible now that the MTA is initialized on every sequenced
task runner of the Task Scheduler.

It also fixes the possible hangs on the UI thread when the automation
thread was joined on destruction.

Bug: 819789
Change-Id: I8964275d97c3302eaa7888e9c827d5e954c2b9eb
Reviewed-on: https://chromium-review.googlesource.com/955673
Commit-Queue: Patrick Monette <pmonette@chromium.org>
Reviewed-by: Greg Thompson <grt@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542838}
Former-commit-id: 219be37228cfe750564dee73499501101cb11b09